# vcfpy

./: .codeclimate.yml  .gitattributes  .gitignore  .landscape.yml  .readthedocs.yaml  .release-please-manifest.json  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codemeta.json  pyproject.toml  release-please-config.json  requirements_dev.txt  requirements_pre36.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: conventional-prs.yml  main.yml  release-please.yml
docs/: Makefile  api_bgzf.rst  api_exceptions.rst  api_header.rst  api_io.rst  api_parser.rst  api_record.rst  api_tabix.rst  best_practice.rst  conf.py  examples.rst  getting_started.rst  history.rst  index.rst  installation.rst  license.rst  make.bat  modules.rst  usage.rst  vcfpy.rst
examples/: bench_parse.py  cp_vcf.py  vcf_from_scratch.py
examples/add_filter/: add_filter.py  input.vcf  stdout.txt
examples/fetch_tabix/: fetch_tabix.py  input.vcf.gz.tbi  stdout.txt
examples/vcf_to_tsv/: stdout.txt  vcf_to_tsv.py
paper/: index.c  legacy.py  paper.bib  paper.md
requirements/: base.txt  dev.txt  pre36.txt  test.txt  test_black.txt
src/vcfpy/: __init__.py  bgzf.py  exceptions.py  header.py  parser.py  reader.py  record.py  tabix.py  writer.py
tests/: conftest.py  test_bgzf_errors.py  test_bgzf_reader.py  test_call.py  test_context_manager.py  test_fetch.py  test_header.py  test_header_add_lines.py  test_header_coverage.py  test_jump_to.py  test_parser_coverage.py  test_parser_field_values.py  test_parser_helpers.py  test_parser_parse_header.py  test_parser_parse_header_lines.py  test_parser_process_alt.py  test_parser_record.py  test_parser_record_breakend.py  test_parser_record_symbolic.py  test_parser_warnings.py  test_public_api.py  test_reader_nosample.py  test_reader_parse_subset.py  test_reader_read_file.py  test_reader_read_header.py  test_record_base.py  test_record_svs.py  test_reserved_fields.py  test_roundtrip.py  test_tabix.py  test_vcfpy.py  test_vcfs_from_the_wild.py  test_write_bgzf.py  test_write_record.py  test_writer_errors.py  test_writer_escape.py  test_writer_write_header.py  test_writer_write_reordered.py  test_writer_write_subset.py
tests/vcfs/: README.txt  annotated_tomato_150.100000.vcf.gz.tbi  from_vcf43.vcf  from_vcf43_nosamples.vcf  full_vcf43.vcf  full_vcf43_no_samples.vcf  multi_contig.vcf
tests/vcfs_from_the_wild/: 1kg.sites.vcf  README.txt  bcftools.vcf  contig_idonly.vcf  example-4.0.vcf  example-4.1-bnd.vcf  example-4.1-info-multiple-values.vcf  example-4.1-ploidy.vcf  example-4.1-sv.vcf  example-4.2.vcf  freebayes.vcf  gatk_26_meta.vcf  gonl.chr20.release4.gtc.vcf  info-type-character.vcf  issue-130.vcf  issue-140-file1.vcf  issue-140-file2.vcf  issue-140-file3.vcf  issue-16.vcf  issue-201.vcf.gz.tbi  issue-214.vcf  issue_49.vcf  metadata-whitespace.vcf  mixed-filtering.vcf  null_genotype_mono.vcf  parse-meta-line.vcf  samples-space.vcf  samtools.vcf  strelka.vcf  string_as_flag.vcf  tb.vcf.gz.tbi  uncalled_genotypes.vcf  walk_left.vcf  walk_refcall.vcf
vcfpy/: __init__.py  _version.py  bgzf.py  compat.py  exceptions.py  header.py  parser.py  reader.py  record.py  warn_utils.py  warnings.py  writer.py
